# image-processing-filter-library

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md  api_reference.md  custom_filter_guide.md  filter_guide.md  filter_registry_guide.md  migration_guide.md
examples/: README.md  __init__.py  artistic_filters_demo.py  basic_filter_usage.py  custom_filter_creation.py  dither_improvements_demo.py  enhancement_filters_demo.py  example_chunked_processing.py  example_execution_queue.py  example_filter_registry.py  filter_chaining.py  preset_management.py  validate_documentation.py  video_processing.py
image_processing_library/: __init__.py  cli.py
image_processing_library/core/: __init__.py  base_filter.py  execution_queue.py  preset_manager.py  utils.py  (+1 more)
tests/: test_background_remover_filter.py  test_base_filter.py  test_chunked_processing.py  test_contrast_filter.py  test_core_protocols.py  test_dither_filter.py  test_error_handling_scenarios.py  test_execution_queue.py  test_filter_registration.py  test_filter_registry.py  test_filter_suite_integration.py  test_gamma_correction_filter.py  test_gaussian_blur_filter.py  test_glitch_filter.py  test_hue_rotation_filter.py  test_image_io.py  test_integration_workflows.py  test_invert_filter.py  test_memory_optimization.py  test_motion_blur_filter.py  test_noise_filter.py  test_performance_benchmarks.py  test_preset_manager.py  test_print_simulation_filter.py  test_rgb_shift_filter.py  test_saturation_filter.py  test_video_io.py
(+20 files in other folders)
